# webtodo

./: Cargo.toml  README.md
to_do/core/: Cargo.toml
to_do/core/src/: enums.rs  main.rs
to_do/core/src/api/basic_actions/: creates.rs  mod.rs
to_do/core/src/structs/: done.rs  pending.rs
to_do/dal/: Cargo.toml
to_do/dal/src/: json_file.rs
to_do/networking/actix_server/: Cargo.toml
to_do/networking/actix_server/src/: main.rs
