[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
dal = { path = "../dal", features = ["json-file"] } # Enable JSON file storage feature
serde = { version = "1.0.228", features = ["derive"] } # For serialization/deserialization
clap = { version = "4.4.5", features = ["derive"] } # For command-line argument parsing
